--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 		</ul>	
 	</div>
 	<div class="content">
-		<div class="project">1</div>
-		<div class="project">2</div>
-		<div class="project">3</div>
-		<div class="project">4</div>
-		<div class="project">5</div>
+		<div class="project" id="image-1">1</div>
+		<div class="project" id="image-2">2</div>
+		<div class="project" id="image-3">3</div>
+		<div class="project" id="image-4">4</div>
+		<div class="project" id="image-5">5</div>
 	</div>
 </body>
 </html>
