--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>portfolio</title>
   <link rel="stylesheet" href="reset.css">
+  <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,11 +25,40 @@
 		</ul>	
 	</div>
 	<div class="content">
-		<div class="project" id="image-1">1</div>
-		<div class="project" id="image-2">2</div>
-		<div class="project" id="image-3">3</div>
-		<div class="project" id="image-4">4</div>
-		<div class="project" id="image-5">5</div>
+		<div class="project">
+			<div class="project-image" id="image-1">
+			</div>
+			<div class="project-desc">
+				<h1>Project 1</h1>
+				<p>this is a fab project i did one time</p>
+			</div>
+		</div>
+
+		<div class="project">
+			<div class="project-image" id="image-2">
+			</div>
+			<div class="project-desc">
+				<h1>Project 1</h1>
+				<p>this is a fab project i did one time. this is a fab project i did one time
+				this is a fab project i did one time
+			</p>
+			</div>
+		</div>
+
+		<div class="project">
+			<div class="project-image">
+			</div>
+			<div class="project-desc">
+			</div>
+		</div>
+
+		<div class="project">
+			<div class="project-image">
+			</div>
+			<div class="project-desc">
+			</div>
+		</div>
+		
 	</div>
 </body>
 </html>
