--- a/index.html
+++ b/index.html
@@ -6,27 +6,39 @@
   <link rel="stylesheet" href="reset.css">
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <script src="assets/jquery-3.1.1.min.js"></script>
 </head>
 <body>
 	<div class="header">
-		<ul class="navigation">
-			<li>
-				<a href='#'>Home</a>
-			</li>
-			<li>
-				<a href='#'>About</a>
-			</li>
-			<li>
-				<a href='#'>Products</a>
-			</li>
-			<li>
-				<a href='#'>Contact</a>
-			</li>
-		</ul>	
+		<div class="mobile-nav">
+			<div class="burger-btn">
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
+		</div>
+		<div class="responsive-menu">
+			<ul class="navigation">
+				<li>
+					<a href='#'>Home</a>
+				</li>
+				<li>
+					<a href='#'>About</a>
+				</li>
+				<li>
+					<a href='#'>Products</a>
+				</li>
+				<li>
+					<a href='#'>Contact</a>
+				</li>
+			</ul>	
+		</div>
 	</div>
 	<div class="content">
 		<div class="project">
-			<div class="project-image" id="image-1">
+			<div class="image-container">
+				<img class="project-image" src="assets/yellowangry.png">
+				<p class="image-cta">View More</p>
 			</div>
 			<div class="project-desc">
 				<h1>Project 1</h1>
@@ -35,30 +47,35 @@
 		</div>
 
 		<div class="project">
-			<div class="project-image" id="image-2">
+			<div class="image-container">
+				<img class="project-image" src="assets/yellowangry.png">
+				<p class="image-cta">View More</p>
 			</div>
 			<div class="project-desc">
 				<h1>Project 1</h1>
-				<p>this is a fab project i did one time. this is a fab project i did one time
-				this is a fab project i did one time
-			</p>
+				<p>this is a fab project i did one time.
+					this is a fab project i did one time.
+				this is a fab project i did one time</p>
 			</div>
 		</div>
 
 		<div class="project">
-			<div class="project-image">
+			<div class="image-container">
+				<img class="project-image" src="assets/yellowangry.png">
+				<p class="image-cta">View More</p>
 			</div>
 			<div class="project-desc">
-			</div>
-		</div>
-
-		<div class="project">
-			<div class="project-image">
-			</div>
-			<div class="project-desc">
+				<h1>Project 1</h1>
+				<p>this is a fab project i did one time</p>
 			</div>
 		</div>
 		
 	</div>
+	<script>
+		$( ".burger-btn" ).click(function() {
+		 console.log('hello');
+		 $('.responsive-menu').toggleClass('expand')
+		});
+	</script>
 </body>
 </html>
