styled project desc

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			</div>
 			<div class="project-desc">
 				<h1>Project 1</h1>
-				<p>this is a fab project i did one time</p>
+				<h4>Cottage cheese fromage frais danish fontina. Fromage frais macaroni cheese cheeseburger fromage frais jarlsberg taleggio halloumi fromage. Taleggio melted cheese macaroni cheese monterey jack cheese and biscuits blue castello cheese and biscuits monterey jack. Lancashire bocconcini cottage cheese say cheese cheesy feet say cheese cheese slices blue castello. Babybel cheesy grin cheese and wine.</h4>
 			</div>
 		</div>
 
@@ -53,9 +53,7 @@
 			</div>
 			<div class="project-desc">
 				<h1>Project 1</h1>
-				<p>this is a fab project i did one time.
-					this is a fab project i did one time.
-				this is a fab project i did one time</p>
+				<h4>Pudding pie gummi bears liquorice bear claw I love donut sweet. Tiramisu dragée cotton candy biscuit lemon drops candy canes oat cake. Toffee chocolate cheesecake gummi bears icing sweet roll fruitcake muffin.</h4>
 			</div>
 		</div>
 
@@ -66,9 +64,22 @@
 			</div>
 			<div class="project-desc">
 				<h1>Project 1</h1>
-				<p>this is a fab project i did one time</p>
+				<h4>Smelly cheese feta halloumi. Parmesan cheesecake halloumi cow cheeseburger st. agur blue cheese cut the cheese danish fontina. Monterey jack hard cheese fondue say cheese queso red leicester manchego cheese strings. Airedale cheese and biscuits cut the cheese pecorino taleggio macaroni cheese.</h4>
 			</div>
 		</div>
+
+		<div class="project">
+			<div class="image-container">
+				<img class="project-image" src="assets/yellowangry.png">
+				<p class="image-cta">View More</p>
+			</div>
+			<div class="project-desc">
+				<h1>Project 1</h1>
+				<h4>Chupa chups chupa chups candy canes. Tart powder jelly beans fruitcake. I love brownie toffee bonbon sweet roll danish I love donut. Fruitcake candy gummies pastry oat cake croissant cake caramels cheesecake.</h4>
+			</div>
+		</div>
+
+	
 		
 	</div>
 	<script>
